--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   
+    "start" : "node ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon ./server"
   },
   "author": "",
   "license": "ISC",
