--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   
-    "start" : "node ./server.js",
+    "start": "node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon ./server"
+    "dev": "nodemon ./server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
   }
 }
